Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "rahulltelkarnginxboard"
spec:
  tls:
    - hosts:
      - sample.app.com
      secretName: tls-certificate
  rules:
  - host: sample.app.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rahulltelkarnginxboard
          servicePort: 80
